add new propetry userId for notes
