# notes/Business/Tools/Swagger/OpenApiDocumentation/openapi.json
@@ -541,6 +541,10 @@
           },
           "details": {
             "type": "string"
+          },
+          "userId": {
+            "type": "integer",
+            "format": "int64"
           }
         }
       },
@@ -548,15 +552,14 @@
         "type": "object",
         "additionalProperties": false,
         "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int64"
-          },
           "title": {
             "type": "string"
           },
           "details": {
             "type": "string"
+          },
+          "isCompleted": {
+            "type": "boolean"
           }
         }
       },
